# qnaforum

./: .env.example  Dockerfile  README.md  main.py  pyproject.toml
app/admin/: routes.py
app/api/: deps.py
app/api/routes/: answers.py  health.py  problems.py  search.py
app/cli/: main.py
app/core/: config.py  db.py  logging.py  security.py
app/models/: __init__.py  answer.py  api_key.py  audit_event.py  problem.py  search_document.py  tag.py  user.py  vector_document.py
app/repositories/: answers.py  api_keys.py  audit.py  problems.py  search_documents.py  tags.py  users.py  vector_documents.py
app/schemas/: answers.py  problems.py  search.py
app/scripts/: init_db.py  rebuild_faiss.py  seed_demo_data.py
app/services/: admin_service.py  answer_service.py  audit_service.py  auth_service.py  embedding_service.py  faiss_index_service.py  problem_service.py  search_document_service.py  search_service.py
app/static/css/: style.css
app/templates/: base.html  index.html  problem_detail.html  search.html
app/templates/admin/: audit.html  dashboard.html  reindex.html  user_detail.html  users.html
app/tests/: test_integration.py
lightstreamer-demo/: README.md  docker-compose.yml  nginx-direct.conf  nginx-proxy.conf
lightstreamer-demo/backend/: Dockerfile  data_adapter.py  requirements.txt
lightstreamer-demo/frontend/: app.js  index.html
lightstreamer-demo/local/: proxy.py  requirements.txt  server.py  start.py
lightstreamer-demo/local/frontend/: app.js  index.html
lightstreamer-demo/ls-server/adapters/DEMO/: adapters.xml
