[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qnaforum"
version = "0.1.0"
description = "Lightweight Q&A Forum MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.30",
  "pydantic>=2.7.0",
  "jinja2>=3.1.4",
  "typer>=0.12.3",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "sentence-transformers>=3.0.1",
  "faiss-cpu>=1.8.0",
  "numpy>=1.26.4"
]

[project.scripts]
qna = "app.cli.main:app"

[tool.setuptools.packages.find]
include = ["app*"]
